# apartment103

./: .gitignore  AGENTS.md  package-lock.json
backend/: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  identifiers.py  notifications.py  security.py
backend/app/db/: base.py  migrate.py  mongo.py
backend/app/jobs/: reconcile_payments.py
backend/app/models/: admin.py  booking.py  cancellation_policy.py  closure.py  guest.py  otp_challenge.py  payment_event.py  plan.py  price.py
backend/app/schemas/: admin.py  auth.py  booking.py  cancellation_policy.py  closure.py  guest.py  payment.py  plan.py  price.py
backend/app/services/: cancellation.py  payment_reconciliation.py  stripe_service.py
backend/migrations/: 20260712000329_add_cancellation_policy_active_flag.py  20260712000329_create_initial_collections.py  20260713203636_create_guests_collection.py  20260713210401_create_bookings_collection.py  20260713221306_embed_booking_cancellation_policy.py  20260714000138_create_admins_collection.py  20260714010000_create_otp_challenges_collection.py  20260716120000_split_plan_pricing_into_prices.py  20260718120000_add_min_stay_days_to_price_date_ranges.py  20260718130000_make_guest_contact_fields_unique.py  20260721120000_create_closures_collection.py  20260723205600_create_payment_events_collection.py
backend/scripts/: create-admin.sh
backend/tests/: test_cancellation.py  test_identifiers.py  test_security.py
frontend/: package.json  (+1 more)
(+295 files in other folders)
