[project]
name = "apartment103-backend"
version = "0.1.0"
description = "Backend API for apartment103"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
    "beanie>=2.1.0",
    "click>=8.1.0",
]

[project.scripts]
mongo-migrate = "app.db.migrate:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
